--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -22,7 +22,7 @@
 
 == INTRODUCTION ==
 
-*DLTRS [=the model]* is a phylogenetic model for the evolution of a guest tree (_gene family_) inside a host tree (_species tree_). It models duplication, loss, lateral transfer (LGT) events, and sequence evolution with a relaxed molecular clock. It is strongly related to its sibling model, [DLRS DLRS], but extends the latter by incorporating support for transfer events.
+*DLTRS [=the model]* is a phylogenetic model for the evolution of a guest tree (_gene family_) inside a host tree (_species tree_). It models duplication, loss, lateral transfer (LGT) events, and sequence evolution with a relaxed molecular clock. It is strongly related to its sibling model, [DLRS DLRS], but extends the latter by incorporating support for transfer events. However, there are some fairly large differences in how the underlying probabilities are computed, and Deleterious is more computationally demanding than Delirious.
 
 The evolution of the guest tree _G_ over the host tree _S_ can be envisioned as occurring in separate phases:
   # _G_ is created by evolving down _S_ by means of duplication, loss and transfer events according to a birth-death-like process. Lineages branch deterministically at speciations. In case of an LGT, a receiving species lineage contemporary with (but excluding) the donor species lineage is uniformly selected.
