Edited wiki page DLTRS through web user interface.

--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -206,7 +206,7 @@ Since Deleterious shares most aspects with its sibling application Delirious, we
 
 *Q1) What is a reasonable discretization for Deleterious? And what about tree sizes?*
 
-A1) That depends. Deleterious is an advanced and already fairly optimized application, which solves systems of ordinary differential equations and performs sophisticated dynamic programming during MCMC iterations. As such, it is time-consuming, and you will have to strike a balance between speed and precision in terms of discretization density. Note, however, that the discretization is carried out on an edge generation-basis (see the figure above). Therefore, an edge generation typically needs fewer points than an edge in Delirious. Also, since transfer events are supported, Deleterious does not need as many points as Delirious on the stem edge in order to cope with odd trees during tree exploration. Try using the default discretization, and if it is too demanding, decrease the density gradually. You cannot, however, expect to run Deleterious on species trees larger than, say, 20 extant taxa. In that case wou will have to resort to more crude methods. The running time is linear in the number of sequences.
+A1) That depends. Deleterious is an advanced and already fairly optimized application, which solves systems of ordinary differential equations and performs sophisticated dynamic programming during MCMC iterations. As such, it is time-consuming, and you will have to strike a balance between speed and precision in terms of discretization density. Note, however, that the discretization is carried out on an edge generation-basis (see the figure above). Therefore, an edge generation typically needs fewer points than an edge in Delirious. Also, since transfer events are supported, Deleterious does not need as many points as Delirious on the stem edge in order to cope with odd trees during tree exploration. Try using the default discretization, and if it is too demanding, decrease the density gradually. You cannot, however, expect to run Deleterious on host trees larger than, say, 20 extant taxa. In that case wou will have to resort to more crude methods. Note also that the running time is linear in the number of guest tree sequences.
 
 *Q2) LGT events always occur between disjoint donor- and recipient species lineages. What about intra-species transfer?*
 
