--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -184,7 +184,7 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dltrs/Dele
 }}}
 
 === 2: More Mollicutes ===
-Another Mollicutes gene family. This family has a weak signal, resulting in many low-probability trees.
+Another Mollicutes gene family. This family has a weak signal, resulting in many low-probability trees. Here, a consensus tree may provide some information. Future extensions of JPrIME and related tools may aid in inspecting the tree space in other fashions.
 
   * [http://jprime.googlecode.com/files/dltrs_example_2.stree dltrs_example_2.stree] (host tree)
   * [http://jprime.googlecode.com/files/dltrs_example_2.fa dltrs_example_2.fa] (protein MSA)
@@ -192,7 +192,7 @@ Another Mollicutes gene family. This family has a weak signal, resulting in many
 
 Here, we might try to improve the MCMC mixing a bit by reducing the duplication and loss rate suggestion boldness, and increasing the relative proportion of branch-swapping operations:
 {{{
-java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dltrs/Deleterious -o dltrs_example_2.mcmc -i 1000000 -t 200 -sm JTT -tngdup [0.4,0.4] -tngloss [0.4,0.4] -tngwg [4,4] dltrs_example_2.stree dltrs_example_2.fa dltrs_example_2.map
+java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dltrs/Deleterious -o dltrs_example_2.mcmc -i 1000000 -t 200 -sm JTT -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngwg [4,4] dltrs_example_2.stree dltrs_example_2.fa dltrs_example_2.map
 }}}
 
 ----
