--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -31,7 +31,7 @@ The evolution of the guest tree _G_ over the host tree _S_ can be envisioned as 
 
 Hence the name DLTRS = duplications, losses, transfers, rates & sequence evolution.
 
-*JPrIME-DLTRS [=the software application]*, colloquially known as *Deleterious*, is the Java application corresponding to the DLTRS model, and is used for inferring an unknown guest tree in light of a known and dated host tree and known sequence data for the leaves. The method relies on Bayesian inference using an MCMC framework. Thus, it will yield a posterior distribution of guest tree topologies and remaining parameters. *Note, however, that in comparison with its sibling tool, [DLRS Delirious], there are some fairly significant differences in how the underlying probabilities are computed, and Deleterious is more computationally demanding than Delirious. Thus, if lateral gene transfer is unlikely to occur, Delirious will be more efficient.*
+*JPrIME-DLTRS [=the software application]*, colloquially known as *Deleterious*, is the Java application corresponding to the DLTRS model, and is used for inferring an unknown guest tree in light of a known and dated host tree and known sequence data for the leaves. The method relies on Bayesian inference using an MCMC framework. Thus, it will yield a posterior distribution of guest tree topologies and remaining parameters. *Note, however, that in comparison with its sibling tool, [DLRS Delirious], there are some fairly significant differences in how the underlying probabilities are computed, and Deleterious is more computationally demanding than Delirious. Thus, if lateral gene transfer are highly improbable, Delirious will be a better choice.*
 
 *Input:*
   * a file with a dated host tree.
