--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -229,7 +229,7 @@ java -jar jprime-X.Y.Z.jar Delirious [options] <host tree> <msa> <leaf map>
 where the JAR file of course refer to your current setup. See also the section on options below.
 You may need to increase the default heap size allocated by Java. The memory requirements will primarily depend on the size of your gene family, MSA length and substitution model. We recommend using Oracle's Java HotSpot virtual machine (VM), in which case a recommended heap size of 512 MB and a maximum heap size of 1024 MB would be specified with:
 {{{
-java -jar jprime-X.Y.Z.jar -Xms512m -Xmx1024m Delirious [options] <host tree> <msa> <leaf map>
+java -Xms512m -Xmx1024m -jar jprime-X.Y.Z.jar Delirious [options] <host tree> <msa> <leaf map>
 }}}
 Note that these options refer to Java's VM itself, and are not options of Delirious. Tuning other aspects of a Java VM is a non-trivial area and is probably not necessary. Should you still wish to do so, please have a look at these documents: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
@@ -349,7 +349,7 @@ A synthetic mammal protein family (the same as used in the tutorial above).
 
 Fancying 1,000,000 iterations, sampling every 200th iteration, and using the JTT substitution model, we may get something like:
 {{{
-java -jar jprime-X.Y.Z.jar -Xms128m -Xmx256m Delirious -o dlrs_example_1.mcmc -i 1000000 -t 200 -sm JTT dlrs_example_1.stree dlrs_example_1.fa dlrs_example_1.map
+java -Xms128m -Xmx256m -jar jprime-X.Y.Z.jar Delirious -o dlrs_example_1.mcmc -i 1000000 -t 200 -sm JTT dlrs_example_1.stree dlrs_example_1.fa dlrs_example_1.map
 }}}
 
 === 2: Yeast orthologs ===
@@ -363,7 +363,7 @@ Family no. 1,975 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browse
 
 If we hypothesize that we have only orthologs, save for a predicted WGD, and we wish to fix this tree and output branch lengths with the samples, we might execute:
 {{{
-java -jar jprime-X.Y.Z.jar -Xms128m -Xmx256m Delirious -o dlrs_example_2.mcmc -i 100000 -t 100 -sm JTT -g dlrs_example_2.gtree -gfix -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
+java -Xms128m -Xmx256m -jar jprime-X.Y.Z.jar Delirious -o dlrs_example_2.mcmc -i 100000 -t 100 -sm JTT -g dlrs_example_2.gtree -gfix -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
 }}}
 
 === 3: ABCA subfamily ===
@@ -375,7 +375,7 @@ The ABCA subfamily for some vertebrates. 12 gene members in human.
 
 On this larger family, we might want to model site rate heterogeneity, achieve some more reasonable acceptance rates by changing the tuning parameters based on pilot runs, and increase the how often the guest tree topology and the branch lengths are perturbed:
 {{{
-java -jar jprime-X.Y.Z.jar -Xms768m -Xmx1536m Delirious -i 1000000 -t 200 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [15.0,15.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
+java -Xms768m -Xmx1536m -jar jprime-X.Y.Z.jar Delirious -i 1000000 -t 200 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [15.0,15.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
 }}}
 
 Note: This will be a long and time-consuming MCMC chain.
