--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -56,11 +56,11 @@ Hence the name DLRS = duplications, losses, rates & sequence evolution.
 
 DLRS has been published [http://www.pnas.org/content/106/14/5714 here] and [http://bioinformatics.oxfordjournals.org/content/early/2012/09/14/bioinformatics.bts548 here]. If you use it, please cite:
 
-*Sjöstrand, J, Sennblad, B, Arvestad, L, Lagergren, J (2012) DLRS: Gene tree evolution in light of a species tree. Bioinformatics. doi: 10.1073/pnas.0806251106.*
+_Sjöstrand, J, Sennblad, B, Arvestad, L, Lagergren, J (2012) DLRS: Gene tree evolution in light of a species tree. Bioinformatics. doi: 10.1073/pnas.0806251106._
 
 or alternatively:
 
-*Åkerborg, Ö, Sennblad, B, Arvestad, L, Lagergren, J (2009) Simultaneous Bayesian gene tree reconstruction and reconciliation analysis. PNAS. 106(14):5714-5719.*
+_Åkerborg, Ö, Sennblad, B, Arvestad, L, Lagergren, J (2009) Simultaneous Bayesian gene tree reconstruction and reconciliation analysis. PNAS. 106(14):5714-5719._
 
 ----
 ----
@@ -302,7 +302,7 @@ In general, we have the following recommendations for some common analyses:
 == OPTIONS ==
 Delirious comes with a large number of user options; please don't feel overwhelmed! Some of the more commonly used ones are detailed below. You can always type
 {{{
-java -cp mypath/jprime-X.Y.Z.jar se/cbb/jprime/apps/dlrs/Delirious -h
+java -jar jprime-X.Y.Z.jar Delirious -h
 }}}
 to get a more up-to-date description of all available options.
 
