Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -268,7 +268,7 @@ Several MCMC-tailored analysis softwares exist, among them:
   * [http://tree.bio.ed.ac.uk/software/tracer/ Tracer].
   * [http://ceb.csit.fsu.edu/awty/ AWTY]. Particularly tailored for inspecting clade convergence diagnostics.
 
-The following shows a trace of the unnormalized posterior density of a short MCMC chain obtained in [VMCMC VMCMC], along with a potential choince of burn-in cut-off.
+The following shows a trace in [VMCMC VMCMC] of the unnormalized posterior density of a short MCMC chain, along with a potential choice of burn-in period length.
 
 [http://jprime.googlecode.com/files/DLRS_convergence.png]
 
