--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -9,3 +9,26 @@ JPrIME-GenPhyloData is a suite of tools to generate realistic synthetic phylogen
   # BranchLengthRelaxer - for relaxing on the molecular clock assumptions of 3 (or 2, if desired).
 
 Additionally, as a 4th stage, it should be easy to use an existing tool for creating realistic artificial sequences for the host or guest tree leaves (i.e. taxa or genes), for example with the popular [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen].
+
+The tools are described below.
+
+----
+
+==HostTreeGenerator==
+To be announced.
+
+----
+
+==GuestTreeGenerator==
+To be announced.
+
+
+----
+
+==BranchLengthRelaxer==
+To be announced.
+
+----
+
+==Producing sequence data==
+If you wish to produce synthetic sequence data for your trees, be it species trees or gene trees, you may use e.g. [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen], which supports a wide range of models of popular models of molecular sequence evolution.
