--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -14,21 +14,24 @@ The tools are described below.
 
 ----
 
-==1. HostTreeGenerator==
+==(1) HostTreeGenerator==
 To be announced.
 
 ----
 
-==2. GuestTreeGenerator==
+==(2) GuestTreeGenerator==
 To be announced.
 
 
 ----
 
-==3. BranchLengthRelaxer==
-To be announced.
+==(3) BranchLengthRelaxer==
+The trees produced in (1) and (2) are ultrametric (_clock-like_). In order to obtain more realistic branch lengths, this application enables relaxing the molecular clock, by rescaling the lengths with heterogeneous rates. A number of popular techniques are supported, including:
+  * Uncorrelated models for IID rates drawn from gamma, log-normal and other distributions.
+  * Rates drawn uniformly (with replacement) from a list of samples. This is convenient to mimic rates from a posterior distribution stemming from an MCMC analysis.
+  * Auto-correlated rates in accordance with TBD.
 
 ----
 
-==4. Producing sequence data==
+==(4) Producing sequence data==
 If you wish to produce synthetic sequence data for your trees, be it species trees or gene trees, you may use e.g. [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen], which supports a wide range of models of popular models of molecular sequence evolution.
